criando paginas html

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Inicio</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis nesciunt recusandae suscipit, quidem illo magni. Ipsa ullam possimus maxime tenetur facere quia, vero itaque, voluptas nihil in eos natus voluptate.</p>
+    <h2>Isso é um teste</h2>
 </body>
 </html>
